@@ -233,6 +233,8 @@ Changes since 2.0.7
 79. autoconf/Makefile.in: Tell the user to re-run the configure script
     if it is more recent than the Makefile.
 80. src/slstd.c: __is_numeric was not returning 3 for Complex_Type.
+81. src/slexcept.c: Do not log traeback messages unless _traceback is
+    non-zero.
 
 {{{ Previous Versions
 
